sn-development-k8s/notification/deployment-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-api
  template:
    metadata:
      labels:
        app: notification-api
    spec:
      containers:
        - name: notification-api
          image: ghcr.io/emso-group/notification/api:b206f07c296336220966cf3181204875e5ce991a
          resources:
            limits:
              cpu: "2"      # Giới hạn tối đa 2 cores
              memory: "1.5Gi" # Giới hạn tối đa 4GB RAM
            requests:
              cpu: "1"      # Yêu cầu 1 core
              memory: "1Gi"
          ports:
            - name: api
              containerPort: 3000
      imagePullSecrets:
        - name: notification-secret
      # affinity:
      #   nodeAffinity:
      #     requiredDuringSchedulingIgnoredDuringExecution:
      #       nodeSelectorTerms:
      #         - matchExpressions:
      #             - key: magnum.openstack.org/nodegroup
      #               operator: In
      #               values:
      #                 - ng-chat
