sn-development-k8s/notification/deployment-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-web
  template:
    metadata:
      labels:
        app: notification-web
    spec:
      containers:
        - name: notification-web
          image: ghcr.io/novuhq/novu/web:0.8.0
          resources:
            limits:
              cpu: "2"      # Giới hạn tối đa 2 cores
              memory: "1.5Gi" # Giới hạn tối đa 4GB RAM
            requests:
              cpu: "1.5"      # Yêu cầu 1 core
              memory: "900Mi"
          ports:
            - name: web
              containerPort: 4200
      imagePullSecrets:
        - name: notification-secret
      # affinity:
      #   nodeAffinity:
      #     requiredDuringSchedulingIgnoredDuringExecution:
      #       nodeSelectorTerms:
      #         - matchExpressions:
      #             - key: magnum.openstack.org/nodegroup
      #               operator: In
      #               values:
      #                 - ng-chat
