sn-development-k8s/notification/deployment-ws.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-ws
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-ws
  template:
    metadata:
      labels:
        app: notification-ws
    spec:
      containers:
        - name: notification-ws
          image: ghcr.io/emso-group/notification/ws:4292f903e57e5a7502a83e4904f4b7793fae0d1d
          resources:
            # limits:
            #   cpu: "4"      # Giới hạn tối đa 2 cores
            #   memory: "10Gi" # Giới hạn tối đa 4GB RAM
           requests:
              cpu: "1"      # Yêu cầu 1 core
              memory: "1Gi"
          ports:
            - name: ws
              containerPort: 3002
      imagePullSecrets:
        - name: notification-secret
      # affinity:
      #   nodeAffinity:
      #     requiredDuringSchedulingIgnoredDuringExecution:
      #       nodeSelectorTerms:
      #         - matchExpressions:
      #             - key: magnum.openstack.org/nodegroup
      #               operator: In
      #               values:
      #                 - ng-chat
