sn-development-k8s/notification/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-api
  annotations:
    metallb.universe.tf/address-pool: default
spec:
  selector:
    app: notification-api
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
    - name: https
      port: 443
      protocol: TCP
      targetPort: 3000
  type: LoadBalancer
  # externalTrafficPolicy: Cluster
