sn-development-k8s/notification/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-web
spec:
  selector:
    app: notification-web
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 4200
    - name: https
      port: 443
      protocol: TCP
      targetPort: 4200
  type: LoadBalancer
  # externalTrafficPolicy: Cluster
