sn-development-k8s/notification/ingress-notification-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notification-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "1G"
    cert-manager.io/cluster-issuer: letsencrypt-sn-prod
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - cmc-notification-api.emso.vn
    secretName: noti-api-tls-secret
  rules:
  - host: cmc-notification-api.emso.vn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: notification-api
            port:
              name: https
