sn-development-k8s/notification/ingress-notification-ws.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notification-ws-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "1G"
    cert-manager.io/cluster-issuer: letsencrypt-sn-prod
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - emso-notification-ws.emso.vn
    secretName: noti-ws-tls-secret
  rules:
  - host: emso-notification-ws.emso.vn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: notification-ws
            port:
              name: https
